--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -18,4 +19,88 @@ code {
 
 #root {
   height: 100%;
+}
+
+::-webkit-scrollbar {
+  width: 10px; /* Mostly for vertical scrollbars */
+  height: 10px; /* Mostly for horizontal scrollbars */
+}
+::-webkit-scrollbar-thumb {
+  /* Foreground */
+  background: #374045;
+}
+::-webkit-scrollbar-track {
+  /* Background */
+  background: #111b21;
+}
+
+.appNameContainer {
+  position: relative;
+}
+
+.appNameContainer h2 {
+  position: absolute;
+  transform: translate(-50%, -50%);
+  font-size: 5em;
+}
+
+.appNameContainer h2:nth-child(1) {
+  color: transparent;
+  -webkit-text-stroke: 2px #00a884;
+}
+
+.appNameContainer h2:nth-child(2) {
+  color: #25d366;
+  animation: animate 5s ease-in-out infinite;
+}
+
+@keyframes animate {
+  0%,
+  100% {
+    clip-path: polygon(
+      0% 45%,
+      15% 44%,
+      32% 50%,
+      54% 60%,
+      70% 61%,
+      84% 59%,
+      100% 52%,
+      100% 100%,
+      0% 100%
+    );
+  }
+  50% {
+    clip-path: polygon(
+      0 60%,
+      16% 65%,
+      34% 66%,
+      51% 62%,
+      67% 50%,
+      84% 45%,
+      100% 40%,
+      100% 100%,
+      0% 100%
+    );
+  }
+}
+
+.technology::after {
+  content: "";
+  height: 2px;
+  background-color: #00a884;
+  width: 0;
+  transition: width 0.6s ease-in-out;
+}
+
+.technologies > li {
+  transition: scale 350ms ease, opacity 350ms linear;
+}
+
+.technology:hover::after {
+  width: 100%;
+}
+
+.technologies:has(li:hover) > li:not(:hover) {
+  scale: 0.8;
+  opacity: 0.7;
 }
